<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.department.AddDepartmentActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingStart="10dp">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/back_icon"
                android:padding="8dp"
                android:src="@drawable/ic_back"
                 app:tint="@color/colorIcon"/>

            <TextView
                android:id="@+id/text_department_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/add_department_title"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/image_validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/validate_icon"
                app:tint="@color/colorIcon"
                android:padding="8dp"
                android:src="@drawable/ic_check" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBack"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="20sp"
                android:textSize="17sp"
                android:text="@string/dept_name_title" />

            <EditText
                android:id="@+id/edittext_dept_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:padding="15sp"
                android:hint="@string/dept_name_hint"
                android:background="@drawable/edittext_border" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="20sp"
                android:textSize="17sp"
                android:text="@string/dept_positions_title" />

            <EditText
                android:id="@+id/edittext_dept_positions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:padding="15sp"
                android:hint="@string/dept_positions_hint"
                android:background="@drawable/edittext_border" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>