<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:paddingStart="10dp">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/back_icon"
            android:padding="8dp"
            android:src="@drawable/ic_back"
            app:tint="@color/colorIcon" />

        <TextView
            android:id="@+id/text_department_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:text="@string/role_add"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/image_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/validate_icon"
            android:padding="8dp"
            app:tint="@color/colorIcon"
            android:onClick="addRole"
            android:src="@drawable/ic_check" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edtRoleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/role_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPermissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:hint="@string/select_role"
                android:inputType="none"
                android:onClick="showPermissionDialog"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvSelectedPermissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="Chưa chọn quyền nào" />

    </LinearLayout>

</LinearLayout>