<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBack">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back_icon"
            android:layout_gravity="start"
            android:padding="8dp"
            app:tint="@color/colorIcon"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_detail"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/action_edit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:tint="@color/colorIcon"
                android:src="@drawable/ic_modifier"
                android:contentDescription="@string/edit"
                android:padding="8dp" />

            <ImageView
                android:id="@+id/action_delete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_supprimer"
                android:contentDescription="@string/delete"
                app:tint="@color/colorIcon"
                android:padding="8dp" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <!-- Nội dung chính -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/colorDetail"
        android:elevation="2dp"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/text_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_name"
            android:textSize="16sp"
            android:textColor="@color/colorGray"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:hint="Không có dữ liệu"
            android:padding="8dp"
            android:background="@color/backgroundGray"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/text_positions_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_list"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="4dp" />

        <ListView
            android:id="@+id/list_positions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:background="@color/backgroundGray"
            android:padding="8dp"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp" />

    </LinearLayout>

</LinearLayout>